--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "XXXXXXXXXXXXXXXX",
+    apiKey: "AIzaSyAE2xCSp5ROdsSmCHmgFkWol5mWnQnV6P0",
     authDomain: "millikenconsulting-400da.firebaseapp.com",
     databaseURL: "https://millikenconsulting-400da.firebaseio.com",
     projectId: "millikenconsulting-400da",
